#4261_jackson3: wip