@@ -15,36 +15,36 @@
  */
 package org.factcast.server.ui.adapter;
 
-import com.fasterxml.jackson.core.JsonFactory;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.vaadin.flow.server.*;
 import jakarta.servlet.http.HttpServletRequest;
 import java.io.*;
 import java.net.*;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.*;
-import lombok.*;
+import lombok.AccessLevel;
+import lombok.NonNull;
+import lombok.Setter;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.factcast.core.util.ExceptionHelper;
 import org.factcast.server.ui.port.FileReportUploadStream;
 import org.factcast.server.ui.port.ReportStore;
 import org.factcast.server.ui.report.*;
+import tools.jackson.core.json.JsonFactory;
+import tools.jackson.databind.ObjectMapper;
 
 @Slf4j
 public class FileSystemReportStore implements ReportStore {
 
   public final String persistenceDir;
 
-  @Setter(value = AccessLevel.PACKAGE)
+  @Setter(AccessLevel.PACKAGE)
   private ObjectMapper objectMapper;
 
   public FileSystemReportStore(@NonNull String persistenceDir) {
     this.persistenceDir = persistenceDir;
     final var om = new ObjectMapper();
-    om.registerModule(new JavaTimeModule());
-    om.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
     this.objectMapper = om;
   }
 
@@ -52,7 +52,7 @@ public class FileSystemReportStore implements ReportStore {
   @SneakyThrows
   public FileReportUploadStream createBatchUpload(
       @NonNull String userName, @NonNull String reportName, @NonNull ReportFilterBean query) {
-    final var reportFilePath = Paths.get(persistenceDir, userName, reportName);
+    final var reportFilePath = Path.of(persistenceDir, userName, reportName);
     log.info("Saving report to {}", reportFilePath);
     log.info("Usable space in partition: {} MB", getUsableSpaceInMb(persistenceDir));
 
@@ -61,7 +61,10 @@ public class FileSystemReportStore implements ReportStore {
       log.debug("Parent dirs created");
       final var path = Files.createFile(reportFilePath);
       log.debug("File created {}", path);
-      return new FileReportUploadStream(new JsonFactory(objectMapper), path, reportName, query);
+      return new FileReportUploadStream(
+          //     // TODO FIXME @SB4
+          // was: new TokenStreamFactory(objectMapper), path, reportName, query);
+          new JsonFactory(), path, reportName, query);
     } else {
       throw new IllegalArgumentException(
           "Report was not generated as another report with this name already exists.");
@@ -78,7 +81,7 @@ public class FileSystemReportStore implements ReportStore {
 
   @Override
   public List<ReportEntry> listAllForUser(@NonNull String userName) {
-    final var reportDir = Paths.get(persistenceDir, userName);
+    final var reportDir = Path.of(persistenceDir, userName);
     if (!Files.exists(reportDir)) {
       return List.of();
     }
@@ -105,7 +108,7 @@ public class FileSystemReportStore implements ReportStore {
 
   @Override
   public void delete(@NonNull String userName, @NonNull String reportName) {
-    final var reportFilePath = Paths.get(persistenceDir, userName, reportName);
+    final var reportFilePath = Path.of(persistenceDir, userName, reportName);
     log.info("Deleting report: {}", reportFilePath);
     if (Files.exists(reportFilePath)) {
       try {
@@ -116,7 +119,7 @@ public class FileSystemReportStore implements ReportStore {
       }
     } else {
       throw new IllegalArgumentException(
-          String.format("No report exists with name %s for user %s", reportName, userName));
+          "No report exists with name %s for user %s".formatted(reportName, userName));
     }
   }
 
